--- a/app/src/main/res/layout/habits_list.xml
+++ b/app/src/main/res/layout/habits_list.xml
@@ -22,9 +22,8 @@
 
     <EditText
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="49dp"
         android:id="@+id/addHabitText"
-        android:layout_weight="0.88"
         android:background="#ffffff"
         android:autoText="false"
         android:textColor="#000000" />
@@ -32,11 +31,10 @@
     <Button
         style="?android:attr/buttonStyleSmall"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="68dp"
         android:text="ADD HABIT"
         android:id="@+id/addHabitButton"
         android:background="#ffffff"
         android:textColor="#75cfe5"
         android:clickable="true" />
-
 </LinearLayout>
