--- a/app/src/main/res/layout/add_habit.xml
+++ b/app/src/main/res/layout/add_habit.xml
@@ -1,12 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="habittracker.cs.ualberta.ca.tagarino_habittracker.AddHabitActivity">
+    android:weightSum="1">
 
-</RelativeLayout>
+    <LinearLayout
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="447dp"
+        android:layout_gravity="center_horizontal"></LinearLayout>
+
+    <EditText
+        android:layout_width="match_parent"
+        android:layout_height="49dp"
+        android:id="@+id/addHabitText"
+        android:background="#ffffff"
+        android:autoText="false"
+        android:textColor="#000000" />
+
+    <Button
+        style="?android:attr/buttonStyleSmall"
+        android:layout_width="match_parent"
+        android:layout_height="68dp"
+        android:text="ADD HABIT"
+        android:id="@+id/addHabitButton"
+        android:background="#ffffff"
+        android:textColor="#75cfe5"
+        android:clickable="true" />
+</LinearLayout>
