--- a/app/src/main/res/layout/habits_list.xml
+++ b/app/src/main/res/layout/habits_list.xml
@@ -12,21 +12,24 @@
 
     <ListView
         android:layout_width="wrap_content"
-        android:layout_height="454dp"
+        android:layout_height="387dp"
         android:id="@+id/habitsListView"
         android:textColor="#f86b14"
         android:background="#ffffff"
         android:clickable="true"
         android:fastScrollEnabled="true"
-        android:smoothScrollbar="true" />
+        android:smoothScrollbar="true"
+        android:layout_weight="0.67" />
 
     <EditText
         android:layout_width="match_parent"
-        android:layout_height="49dp"
-        android:id="@+id/addHabitText"
-        android:background="#ffffff"
-        android:autoText="false"
-        android:textColor="#000000" />
+        android:layout_height="wrap_content"
+        android:id="@+id/addHabitNameText"
+        android:layout_gravity="center_horizontal"
+        android:layout_weight="0.36"
+        android:textColor="#000000"
+        android:singleLine="true"
+        android:textCursorDrawable="@null" />
 
     <Button
         style="?android:attr/buttonStyleSmall"
