--- a/app/src/main/res/layout/habits_list.xml
+++ b/app/src/main/res/layout/habits_list.xml
@@ -39,5 +39,6 @@
         android:id="@+id/addHabitButton"
         android:background="#ffffff"
         android:textColor="#75cfe5"
-        android:clickable="true" />
+        android:clickable="true"
+        android:onClick="addHabitAction" />
 </LinearLayout>
