Add and Delete works

--- a/app/src/main/res/layout/habits_list.xml
+++ b/app/src/main/res/layout/habits_list.xml
@@ -6,12 +6,12 @@
 
     <LinearLayout
         android:orientation="vertical"
-        android:layout_width="match_parent"
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="right"></LinearLayout>
 
     <ListView
-        android:layout_width="wrap_content"
+        android:layout_width="fill_parent"
         android:layout_height="387dp"
         android:id="@+id/habitsListView"
         android:textColor="#f86b14"
