--- a/app/src/main/res/layout/habits_list.xml
+++ b/app/src/main/res/layout/habits_list.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -15,7 +16,6 @@
         android:layout_height="387dp"
         android:id="@+id/habitsListView"
         android:textColor="#f86b14"
-        android:background="#ffffff"
         android:clickable="true"
         android:fastScrollEnabled="true"
         android:smoothScrollbar="true"
@@ -27,7 +27,7 @@
         android:id="@+id/addHabitNameText"
         android:layout_gravity="center_horizontal"
         android:layout_weight="0.36"
-        android:textColor="#000000"
+        android:textColor="#ffffff"
         android:singleLine="true"
         android:textCursorDrawable="@null" />
 
@@ -37,7 +37,6 @@
         android:layout_height="68dp"
         android:text="ADD HABIT"
         android:id="@+id/addHabitButton"
-        android:background="#ffffff"
         android:textColor="#75cfe5"
         android:clickable="true"
         android:onClick="addHabitAction" />
